# att-is-all-we-need

./: README.md  pyproject.toml  requirements.txt
config/: default.yaml
runs/run_20250907-124440/: events.out.tfevents.1757274280.NicholasWarMachine.local.10151.0
runs/run_20250907-124455/: events.out.tfevents.1757274295.NicholasWarMachine.local.10450.0
src/attention_is_all_you_need.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/train/: train.py
src/transformer/attention/: multihead.py  scaled_dot_product.py
src/transformer/ecodeco/: decoder_layer.py  decoder_stack.py  encoder_layer.py  encoder_stack.py
src/transformer/transformer/: model.py
src/transformer/utils/: positional_encoding.py  projection.py  pwffn.py  softmax.py
src/utils/: cli.py  config.py  logger.py  seed.py  tokenizer.py
tests/: smoke.py
