[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attention-is-all-you-need"
version = "0.1.0"
description = "Implementation of 'Attention Is All You Need' Transformer from scratch"
readme = "README.md"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "pyyaml>=6.0", 
    "tqdm>=4.64.0",
    "pytest>=7.0.0",
    "tensorboard>=2.10.0",
    "matplotlib>=3.5.0"
]

[project.optional-dependencies]
dev = ["black", "flake8", "mypy"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']