[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attention-is-all-you-need"
version = "0.1.0"
description = "Implementation of 'Attention Is All You Need' Transformer from scratch"
readme = "README.md"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4.0",
    "numpy>=2.1.0",
    "pyyaml>=6.0.2", 
    "tqdm>=4.67.0",
    "pytest>=8.3.0",
    "tensorboard>=2.18.0",
    "matplotlib>=3.9.0"
]

[project.optional-dependencies]
dev = ["black", "flake8", "mypy"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']